CXXFLAGS = -pedantic -O3 -std=c++0x -pipe $(OPENMP_CFLAGS)

bin_PROGRAMS = minedraft
minedraft_SOURCES = main.cpp chunk.cpp chunk.hpp image.cpp image.hpp \
	intstring.cpp intstring.hpp level.cpp level.hpp nbt.cpp nbt.hpp \
	nbttags.cpp nbttags.hpp options.cpp options.hpp output.cpp output.hpp \
	pixel.cpp pixel.hpp pvector.cpp pvector.hpp \
	renderer.cpp renderer.hpp colours.cpp \
	render_contour.cpp render_contour.hpp
