AM_CXXFLAGS = -std=c++0x $(OPENMP_CXXFLAGS) -DUNICODE

bin_PROGRAMS = hubward
hubward_SOURCES = main.cpp chunk.cpp chunk.hpp image.cpp image.hpp \
	intstring.cpp intstring.hpp level.cpp level.hpp nbt.cpp nbt.hpp \
	nbttags.cpp nbttags.hpp options.cpp options.hpp output.cpp output.hpp \
	pixel.cpp pixel.hpp pvector.cpp pvector.hpp \
	renderer.cpp renderer.hpp colours.cpp \
	render_contour.cpp render_contour.hpp
